k8s-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gcpanel
  labels:
    name: gcpanel
    app: construction-management
    environment: production
